crates/audio/src/engine/snapshots/audio__engine__machine__tests__a_picked_row_fades_over_a_stream_that_is_still_decoding.snap
---
source: crates/audio/src/engine/machine.rs
assertion_line: 663
expression: wiring.log
---
[
    Ok(
        Cmd {
            effects: [
                Execute(
                    Clear(
                        Speed(
                            1.0,
                        ),
                    ),
                ),
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Execute(
                    StartLoad(
                        Speed(
                            1.0,
                        ),
                    ),
                ),
                Run(
                    Decode {
                        path: "/tmp/track0.flac",
                        revision: Revision(
                            2,
                        ),
                    },
                ),
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Execute(
                    Play,
                ),
                Execute(
                    Report,
                ),
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Execute(
                    Clear(
                        Speed(
                            1.0,
                        ),
                    ),
                ),
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Execute(
                    StartLoad(
                        Speed(
                            1.0,
                        ),
                    ),
                ),
                Run(
                    Decode {
                        path: "/tmp/track2.flac",
                        revision: Revision(
                            2,
                        ),
                    },
                ),
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Execute(
                    Play,
                ),
                Execute(
                    Report,
                ),
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Execute(
                    Start(
                        Gain(
                            1.0,
                        ),
                    ),
                ),
                Execute(
                    Report,
                ),
            ],
            messages: [
                Loaded(
                    Some(
                        100s,
                    ),
                ),
            ],
        },
    ),
    Err(
        Unhandled,
    ),
]
