crates/audio/src/engine/snapshots/audio__engine__machine__tests__a_picked_row_fades_over_the_stream_the_media_key_started.snap
---
source: crates/audio/src/engine/machine.rs
expression: wiring.log
---
[
    Clear,
    StartLoad {
        path: "/tmp/track0.flac",
        speed: Speed(
            1.0,
        ),
    },
    SetVolume(
        0.5,
    ),
    Many(
        [
            Play,
            Report,
        ],
    ),
    Many(
        [
            Start {
                volume: 0.5,
                total: Some(
                    100s,
                ),
            },
            Report,
        ],
    ),
    Clear,
    StartLoad {
        path: "/tmp/track2.flac",
        speed: Speed(
            1.0,
        ),
    },
    SetVolume(
        0.5,
    ),
    Many(
        [
            Play,
            Report,
        ],
    ),
    Many(
        [
            Start {
                volume: 0.5,
                total: Some(
                    100s,
                ),
            },
            Report,
        ],
    ),
    Nothing,
]
