crates/audio/src/engine/snapshots/audio__engine__machine__tests__three_skips_inside_one_crossfade_end_on_a_single_stream.snap
---
source: crates/audio/src/engine/machine.rs
assertion_line: 682
expression: wiring.log
---
[
    Ok(
        Cmd {
            effects: [
                Clear(
                    Speed(
                        1.0,
                    ),
                ),
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                StartLoad {
                    path: "/tmp/track0.flac",
                    speed: Speed(
                        1.0,
                    ),
                },
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Play,
                Report,
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Start(
                    Gain(
                        1.0,
                    ),
                ),
                Report,
            ],
            messages: [
                Loaded(
                    Some(
                        100s,
                    ),
                ),
            ],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Clear(
                    Speed(
                        1.0,
                    ),
                ),
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                StartLoad {
                    path: "/tmp/track1.flac",
                    speed: Speed(
                        1.0,
                    ),
                },
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Play,
                Report,
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Start(
                    Gain(
                        1.0,
                    ),
                ),
                Report,
            ],
            messages: [
                Loaded(
                    Some(
                        100s,
                    ),
                ),
            ],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Clear(
                    Speed(
                        1.0,
                    ),
                ),
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                StartLoad {
                    path: "/tmp/track2.flac",
                    speed: Speed(
                        1.0,
                    ),
                },
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Play,
                Report,
            ],
            messages: [],
        },
    ),
    Ok(
        Cmd {
            effects: [
                Start(
                    Gain(
                        1.0,
                    ),
                ),
                Report,
            ],
            messages: [
                Loaded(
                    Some(
                        100s,
                    ),
                ),
            ],
        },
    ),
    Err(
        Unhandled,
    ),
    Err(
        Unhandled,
    ),
]
