crates/audio/src/engine/snapshots/audio__engine__machine__tests__three_skips_inside_one_fade_end_on_a_single_stream.snap
---
source: crates/audio/src/engine/machine.rs
expression: wiring.log
---
[
    Clear,
    StartLoad {
        path: "/tmp/track0.flac",
        speed: Speed(
            1.0,
        ),
    },
    SetVolume(
        0.5,
    ),
    Many(
        [
            Play,
            Report,
        ],
    ),
    Many(
        [
            Start {
                volume: 0.5,
                total: Some(
                    100s,
                ),
            },
            Report,
        ],
    ),
    Clear,
    StartLoad {
        path: "/tmp/track1.flac",
        speed: Speed(
            1.0,
        ),
    },
    SetVolume(
        0.5,
    ),
    Many(
        [
            Play,
            Report,
        ],
    ),
    Many(
        [
            Start {
                volume: 0.5,
                total: Some(
                    100s,
                ),
            },
            Report,
        ],
    ),
    Clear,
    StartLoad {
        path: "/tmp/track2.flac",
        speed: Speed(
            1.0,
        ),
    },
    SetVolume(
        0.5,
    ),
    Many(
        [
            Play,
            Report,
        ],
    ),
    Many(
        [
            Start {
                volume: 0.5,
                total: Some(
                    100s,
                ),
            },
            Report,
        ],
    ),
    Nothing,
    Nothing,
]
